edited object and img

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <main class="main">
       <h1 class="title">Выбери свой продукт</h1>
+      <img class="background-image" src="../img/bg-flowers.png" />
       <div class="cards-wrapper">
         <div class="card-container"></div>
       </div>
