change fncs and html

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
       </div>
       <div class="footer__form">
         <p class="footer__form-text">Подпишись на наши акции:</p>
-        <div class="footer__form--input">
+        <div class="footer__form-input">
           <form id="footer-form">
             <input type="text" id="footer-input" name="email" placeholder="Введите e-mail..." required />
             <button type="submit" class="footer__form-input-button">Подписаться</button>
           </form>
         </div>
         <div class="footer__website">
-          <p class="footer__website--text">www.product-cards©all rights reserved</p>
+          <p class="footer__website-text">www.product-cards©all rights reserved</p>
         </div>
       </div>
       <nav class="footer__links">
