deleted classes of input & label in form

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
   <div class="form-wrapper">
     <form id="register-form">
       <h2 class="form-register__text">Регистрация нового пользователя</h2>
-      <label class="register-form__label" for="user-name">Имя</label>
-      <input class="register-form-input user-name" name="user-name" type="text" placeholder="Введите имя" required />
-      <label class="register-form__label" for="user-surname">Фамилия</label>
-      <input class="register-form-input user-surname" name="user-surname" type="text" placeholder="Введите фамилия" required />
-      <label class="register-form__label" for="user-email">e-mail адрес</label>
-      <input class="register-form-input user-email" name="user-email" type="email" placeholder="Введите e-mail" required />
-      <label class="register-form__label" for="user-year">Год рождения</label>
-      <input class="register-form-input user-year" name="user-year" type="number" placeholder="Введите год рождения" required />
-      <label class="register-form__label" for="user-password">Придумайте пароль</label>
-      <input class="register-form-input user-password" name="user-password" type="password" placeholder="Пароль" required minlength="6" />
-      <label class="register-form__label" for="user-repeat-password">Повторите пароль</label>
-      <input class="register-form-input user-repeat-password" name="user-repeat-password" type="password" placeholder="Повторите пароль"
+      <label for="user-name">Имя</label>
+      <input name="user-name" type="text" placeholder="Введите имя" required />
+      <label for="user-surname">Фамилия</label>
+      <input type="text" placeholder="Введите фамилия" required />
+      <label for="user-email">e-mail адрес</label>
+      <input name="user-email" type="email" placeholder="Введите e-mail" required />
+      <label for="user-year">Год рождения</label>
+      <input name="user-year" type="number" placeholder="Введите год рождения" required />
+      <label for="user-password">Придумайте пароль</label>
+      <input name="user-password" type="password" placeholder="Пароль" required minlength="6" />
+      <label for="user-repeat-password">Повторите пароль</label>
+      <input name="user-repeat-password" type="password" placeholder="Повторите пароль"
         required minlength="6" />
       <button class="register-form__button" type="submit">Продолжить</button>
     </form>
