updated id inputs

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
     <form id="register-form">
       <h2 class="form-register__text">Регистрация нового пользователя</h2>
       <label for="user-name">Имя</label>
-      <input name="user-name" type="text" placeholder="Введите имя" required />
+      <input id="user-name" name="user-name" type="text" placeholder="Введите имя" required />
       <label for="user-surname">Фамилия</label>
-      <input type="text" placeholder="Введите фамилия" required />
+      <input id="user-surname" type="text" placeholder="Введите фамилия" required />
       <label for="user-email">e-mail адрес</label>
-      <input name="user-email" type="email" placeholder="Введите e-mail" required />
+      <input id="user-email" name="user-email" type="email" placeholder="Введите e-mail" required />
       <label for="user-year">Год рождения</label>
-      <input name="user-year" type="number" placeholder="Введите год рождения" required />
+      <input id="user-year" name="user-year" type="number" placeholder="Введите год рождения" required />
       <label for="user-password">Придумайте пароль</label>
-      <input name="user-password" type="password" placeholder="Пароль" required minlength="6" />
+      <input id="user-password"  name="user-password" type="password" placeholder="Пароль" required minlength="6" />
       <label for="user-repeat-password">Повторите пароль</label>
-      <input name="user-repeat-password" type="password" placeholder="Повторите пароль"
+      <input id="user-repeat-password" name="user-repeat-password" type="password" placeholder="Повторите пароль"
         required minlength="6" />
       <button class="register-form__button" type="submit">Продолжить</button>
     </form>
