--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
+  <script type="module" src="homework-8.js" defer></script>
   <script type="module" src="homework-9.js" defer></script>
 </head>
 
@@ -41,19 +42,6 @@
     <form id="register-form">
       <h2 class="form-register__text">Регистрация нового пользователя</h2>
       <label for="user-name">Имя</label>
-<<<<<<< Updated upstream
-      <input name="user-name" type="text" placeholder="Введите имя" required />
-      <label for="user-surname">Фамилия</label>
-      <input type="text" placeholder="Введите фамилия" required />
-      <label for="user-email">e-mail адрес</label>
-      <input name="user-email" type="email" placeholder="Введите e-mail" required />
-      <label for="user-year">Год рождения</label>
-      <input name="user-year" type="number" placeholder="Введите год рождения" required />
-      <label for="user-password">Придумайте пароль</label>
-      <input name="user-password" type="password" placeholder="Пароль" required minlength="6" />
-      <label for="user-repeat-password">Повторите пароль</label>
-      <input name="user-repeat-password" type="password" placeholder="Повторите пароль"
-=======
       <input id="user-name" name="userName" type="text" placeholder="Введите имя" required />
       <label for="user-surname">Фамилия</label>
       <input id="user-surname" name="userSurname" type="text" placeholder="Введите фамилия" required />
@@ -65,7 +53,6 @@
       <input id="user-password"  name="userPassword" type="password" placeholder="Пароль" required minlength="6" />
       <label for="user-repeat-password" data-default="Повторите пароль">Повторите пароль</label>
       <input id="user-repeat-password" name="userRepeatPassword" type="password" placeholder="Повторите пароль"
->>>>>>> Stashed changes
         required minlength="6" />
       <button class="register-form__button" type="submit">Продолжить</button>
     </form>
