--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="modal__header">Пройдите авторизацию для успешной регистрации</div>
         <button class="modal__close">&times;</button>
         <div class="modal__body">
-          <form id="form__modal" action="">
+          <form id="form-modal">
             <div class="modal__error-container">
               <label class="form__modal-label" data-default="Введите имя пользователя" for="user-name">Введите имя пользователя</label>
               <input id="form__modal-user-name" class="form__modal-input" type="text" name="userName" placeholder="Имя" required />
