--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <label for="user-email">e-mail адрес</label>
       <input id="user-email" name="userEmail" type="email" placeholder="Введите e-mail" required />
       <label for="user-year">Год рождения</label>
-      <input id="user-year" name="userYear" type="number" placeholder="Введите год рождения" required />
+      <input id="user-year" name="userYear" type="date" placeholder="Введите год рождения" required />
       <label for="user-password" data-default="Введите пароль">Придумайте пароль</label>
       <input id="user-password"  name="userPassword" type="password" placeholder="Пароль" required minlength="6" />
       <label for="user-repeat-password" data-default="Повторите пароль">Повторите пароль</label>
