html && added condition

--- a/async/async.html
+++ b/async/async.html
@@ -10,11 +10,11 @@
   <body>
     
     <div class="container">
-      <p class="loading-text">Данные загружаются</p>
+      <p class="container__loading-text">Данные загружаются</p>
 
-      <button class="refresh-users">обновить пользователей</button>
-      <button class="delete-users">удалить всех пользователей</button>
-      <div class="user-container"></div>
+      <button class="container__refresh-btn">обновить пользователей</button>
+      <button class="container__delete-btn">удалить всех пользователей</button>
+      <div class="container__user-list"></div>
     </div>
 
 
